--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -599,7 +599,7 @@
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-20-fund gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head2">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top"
                                                     style="padding-bottom: 20px ;">
