--- a/foundation-studies.html
+++ b/foundation-studies.html
@@ -299,7 +299,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="index.html"><img src="img/raffles-logo2.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
@@ -589,7 +589,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 600px 0px 60px 0px;" id="gdlr-core-wrapper-1">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(upload/shutterstock_628998404.jpg) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/foundation/slider.jpg) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0"></div>
                         </div>
                         <div class="gdlr-core-page-builder-wrapper-bottom-gradient"
@@ -629,7 +629,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content prg-width p-color">
+                                                    <div class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
                                                         <p>The aim of the Design Foundation program is to prepare the
                                                             new students before
                                                             they enter their specialized diploma with a solid foundation
@@ -655,7 +655,7 @@
                         data-skin="Blut Title Column Service">
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container mrg-btn">
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-event-item gdlr-core-item-pdb" style="padding-bottom: 25px ;">
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align gdlr-core-item-mglr"
@@ -671,7 +671,7 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/foundation/learning-study.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -689,9 +689,9 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/foundation/drawing.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -712,7 +712,7 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/foundation/art-history.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -730,9 +730,9 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/foundation/Mathematics.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
