--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Kingster &#8211; School, College &amp; University HTML Template</title>
+    <title>Raffles University</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
@@ -481,64 +481,15 @@
                                     <li class="menu-item kingster-normal-menu"><a href="#"
                                         class="sf-with-ul-pre">Services</a>
                                     </li>
-                                    <li class="menu-item menu-item-has-children kingster-mega-menu"><a
-                                            href="programmes.html" class="sf-with-ul-pre">Programmes</a>
-                                        <!-- <div class="sf-mega sf-mega-full megaimg">
-                                            <ul class="sub-menu">
-                                                <li class="menu-item menu-item-has-children" data-size="15"><a
-                                                        class="sf-with-ul-pre">Undergraduate</a>
-                                                    <ul class="sub-menu">
-                                                        <li class="menu-item"><a
-                                                                href="bachelor-of-science-in-business-administration.html">Business
-                                                                Administration</a></li>
-                                                        <li class="menu-item"><a href="school-of-law.html">School Of
-                                                                Law</a></li>
-                                                        <li class="menu-item"><a href="engineering.html">Engineering</a>
-                                                        </li>
-                                                        <li class="menu-item"><a href="medicine.html">Medicine</a></li>
-                                                        <li class="menu-item"><a href="art-science.html">Art &#038;
-                                                                Science</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="menu-item menu-item-has-children" data-size="15"><a href="#"
-                                                        class="sf-with-ul-pre">Graduate Program</a>
-                                                    <ul class="sub-menu">
-                                                        <li class="menu-item"><a
-                                                                href="hospitality-management.html">Hospitality
-                                                                Management</a></li>
-                                                        <li class="menu-item"><a href="physics.html">Physics</a></li>
-                                                        <li class="menu-item"><a href="#">Chemistry</a></li>
-                                                        <li class="menu-item"><a href="#">Music</a></li>
-                                                        <li class="menu-item"><a href="#">Computer Science</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="menu-item menu-item-has-children" data-size="15"><a href="#"
-                                                        class="sf-with-ul-pre">Resources</a>
-                                                    <ul class="sub-menu">
-                                                        <li class="menu-item"><a
-                                                                href="bachelor-of-science-in-business-administration.html">Department
-                                                                Page</a></li>
-                                                        <li class="menu-item"><a href="finance.html">Major Page</a></li>
-                                                        <li class="menu-item"><a href="finance-faculty.html">Faculty
-                                                                Page</a></li>
-                                                        <li class="menu-item"><a href="john-hagensy-phd.html">Single
-                                                                Instructor</a></li>
-                                                        <li class="menu-item"><a
-                                                                href="introduction-to-financial-accounting.html">Single
-                                                                Course</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="menu-item" data-size="15">
-                                                    <div class="kingster-mega-menu-section-content"><img
-                                                            src="upload/mega-menu-logo.png" style="margin-bottom: 13px;"
-                                                            alt="" /> <span
-                                                            style="font-size: 14px; font-weight: 500;">Academic
-                                                            offerings include 95 majors, 86 minors, and more than 100
-                                                            in-major specializations</span></div>
-                                                </li>
-                                            </ul>
-                                        </div> -->
-                                    </li>
+                                    <li
+                                    class="menu-item menu-item-home current-menu-item kingster-normal-menu">
+                                    <a href="#" class="sf-with-ul-pre">Programmes</a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item menu-item-home" data-size="60"><a
+                                                href="foundation-studies.html">Foundation studies</a></li>
+                                        <li class="menu-item" data-size="60"><a href="fashion-management-design.html">Fashion marketing & management design</a></li>
+                                    </ul>
+                                </li>
                                     <!-- <li class="menu-item menu-item-has-children kingster-normal-menu"><a
                                             href="apply-to-kingster.html" class="sf-with-ul-pre">Gallery</a>
                                         <ul class="sub-menu">
@@ -921,7 +872,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a class="gdlr-core-pbf-column-link" href="#" target="_self"></a>
+                                        <a class="gdlr-core-pbf-column-link" href="foundation-studies.html"></a>
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
