--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                     </li>
                                     <li
                                     class="menu-item menu-item-home current-menu-item kingster-normal-menu">
-                                    <a href="#" class="sf-with-ul-pre">Programmes</a>
+                                    <a href="programmes.html" class="sf-with-ul-pre">Programmes</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item menu-item-home" data-size="60"><a
                                                 href="foundation-studies.html">Foundation studies</a></li>
