--- a/fashion-design.html
+++ b/fashion-design.html
@@ -29,7 +29,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="index.html"><img src="img/raffles-logo2.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -299,7 +299,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="index.html"><img src="img/raffles-logo2.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
@@ -589,7 +589,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 600px 0px 60px 0px;" id="gdlr-core-wrapper-1">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(upload/shutterstock_628998404.jpg) ;background-size: cover ;background-position: center ;"
+                                style="background-image: url(img/fashion-design/slider.jpg) ;background-size: cover ;background-position: center ;"
                                 data-parallax-speed="0"></div>
                         </div>
                         <div class="gdlr-core-page-builder-wrapper-bottom-gradient"
@@ -604,7 +604,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top"
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3-css2">
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3-css">
                                                             Fashion Design</h3>
                                                     </div>
                                                 </div>
@@ -628,7 +628,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content prg-width p-color">
+                                                    <div class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
                                                         <p>It is an art based on creating designs that take aesthetic
                                                             influence inspired by social,
                                                             geographical, economic and cultural aspects. It also means
@@ -674,7 +674,7 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/fashion-design/Creativity.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -691,9 +691,9 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/fashion-design/Digital.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -711,7 +711,7 @@
                                             <div
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/fashion-design/Design.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -728,9 +728,9 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20 gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="upload/fancycrave-270977-unsplash-600x333.jpg"
+                                                    <a href="#"><img src="img/fashion-design/Theory.jpg"
                                                             width="900" height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
@@ -750,8 +750,8 @@
                                         </div>
                                     </div>
                                     <div class="gdlr-core-pbf-wrapper split-section">
-                                        <div class="gdlr-core-pbf-background-wrap"
-                                            style="background-image: url(img/B34A0299.jpg) ;background-size: cover;background-position-y: -315px;">
+                                        <div class="gdlr-core-pbf-background-wrap img-fash"
+                                            style="background-image: url(img/fashion-design/Splitter.jpg)">
                                             <div class="fash-overlay"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
