--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                                     2</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#"
+                                    <li class="menu-item kingster-normal-menu"><a href="about-us.html"
                                             class="sf-with-ul-pre">About Us</a>
                                         <!-- <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="about-us.html">About KU</a>
@@ -482,7 +482,7 @@
                                         class="sf-with-ul-pre">Services</a>
                                     </li>
                                     <li
-                                    class="menu-item menu-item-home current-menu-item kingster-normal-menu">
+                                    class="menu-item kingster-normal-menu">
                                     <a href="programmes.html" class="sf-with-ul-pre">Programmes</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item menu-item-home" data-size="60"><a
@@ -916,7 +916,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -984,7 +984,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/6-05.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;filter: contrast(0.8) ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -1833,7 +1833,7 @@
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div>
+                                <div style="transform: scale(0.85);">
                                     <i class="fa fa-instagram insta-icon"></i>
                                     <div class="vl">
                                     </div>
