--- a/visual-communication.html
+++ b/visual-communication.html
@@ -676,7 +676,7 @@
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
+                                                    <h3 class="gdlr-core-event-item-title titles-css h3-vis"><a
                                                             href="#">Practical</a></h3>
                                                     <p class="font-css gdlr-core-column-20">
                                                         • Design fundamentals<br>
@@ -689,7 +689,7 @@
                                                         • Portfolio design<br>
                                                         • Industrial attachment<br>
                                                     </p>
-                                                    <p class="font-css gdlr-core-column-20">
+                                                    <p class="font-css gdlr-core-column-20 center-grid">
                                                         • Drawing fundamentals<br>
                                                         • Visual identity system<br>
                                                         • Digital illustration<br>
@@ -699,7 +699,7 @@
                                                         • Design Studio 1<br>
                                                         • Design Studio 2<br>
                                                     </p>
-                                                    <p class="font-css gdlr-core-column-20-fund">
+                                                    <p class="font-css gdlr-core-column-20-fund center-grid">
                                                         • Type & Layout<br>
                                                         • Visual identity system<br>
                                                         • Digital illustration<br>
@@ -723,8 +723,8 @@
                                                         <div class="gdlr-core-pbf-element">
                                                             <h3
                                                                 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
-                                                                Career opportunities available after<br>
-                                                                completing the Interior Design diploma
+                                                                Career opportunities available after completing<br>
+                                                                the Visual Communication diploma
                                                             </h3>
                                                         </div>
                                                     </div>
@@ -734,43 +734,27 @@
                                             <div class="grid-container-intr">
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 1">
-                                                    <p>Commercial Interior Designer</p>
+                                                    <p>Creative Director</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 2">
-                                                    <p>Manager Design</p>
+                                                    <p>Illustrator</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 3">
-                                                    <p>Residential Interior Designer</p>
+                                                    <p>Editorial Designer</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 4">
-                                                    <p>Exhibition Designer</p>
+                                                    <p>Advertising Art Director</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 5">
-                                                    <p>Institutional Interior Designer</p>
+                                                    <p>Packaging Designer</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>CAD Designer</p>
-                                                </div>
-                                                <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Furniture Designer</p>
-                                                </div>
-                                                <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Educator</p>
-                                                </div>
-                                                <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Design Consultant</p>
-                                                </div>
-                                                <div class="grid-item">
-                                                    <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Lighting Designer Facility</p>
+                                                    <p>Corporate Identity Designer</p>
                                                 </div>
                                             </div>
 
