--- a/visual-communication.html
+++ b/visual-communication.html
@@ -712,6 +712,74 @@
                                                 </div>
                                             </div>
 
+
+                                            <div class="gdlr-core-pbf-wrapper split-section2" id="div_983a_29">
+                                                <div class="gdlr-core-pbf-background-wrap" id="div_983a_30"></div>
+                                                <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                                                    <div
+                                                        class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                                                        <div
+                                                            class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                                                            <div
+                                                                class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                                                <div
+                                                                    class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                                                                    <div class="gdlr-core-pbf-element">
+                                                                        <img src="img/about/about us -03.png" alt=""
+                                                                            class="vision-img">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
+                                                            <div
+                                                                class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                                                <div
+                                                                    class="gdlr-core-pbf-column-content clearfix gdlr-core-js values">
+                                                                    <div class="gdlr-core-pbf-element">
+                                                                        <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
+                                                                            id="div_983a_26">
+                                                                            <div
+                                                                                class="gdlr-core-title-item-title-wrap clearfix">
+                                                                                <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                                                    id="h3_983a_4">Our Values </h3>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="gdlr-core-pbf-element">
+                                                                        <div
+                                                                            class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
+                                                                            <div class="gdlr-core-text-box-item-content"
+                                                                                id="div_983a_27">
+                                                                                <p class="p-about"
+                                                                                    style="color: white;">We work to
+                                                                                    provide
+                                                                                    skilled professionals,
+                                                                                    which ensures
+                                                                                    the highest standards of teaching
+                                                                                    for students.
+                                                                                </p>
+                                                                                <p class="p-about"
+                                                                                    style="color: white;">
+                                                                                    We seek to create an environment of
+                                                                                    trust, support,
+                                                                                    acceptance, and safety to foster a
+                                                                                    sense of belonging
+                                                                                    and well-being in our students.
+                                                                                    For us, change is an opportunity for
+                                                                                    progress, so we work
+                                                                                    tirelessly to ensure the future of
+                                                                                    our students.</p>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <div class="gdlr-core-pbf-wrapper split-section">
                                                 <div class="gdlr-core-pbf-background-wrap img-fash"
                                                     style="background-image: url(img/Interior/Splitter.png)">
