--- a/about-us.html
+++ b/about-us.html
@@ -1152,7 +1152,7 @@
                 </a>
             </div>
 
-            <section class="subscription-block">
+            <section class="subscription-block2">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
@@ -1169,7 +1169,7 @@
                 </div>
             </section>
 
-            <footer>
+            <footer class="mrg-footer">
                 <div class="kingster-footer-wrapper ">
                     <div class="kingster-footer-container kingster-container clearfix">
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
