--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -690,8 +690,9 @@
                                                         • Fashion Buying<br>
                                                         • Buying Principles<br>
                                                         • Consumer Behavior<br>
-                                                        • Academic Research &
-                                                        Communication Skill
+                                                        • Academic Research &<br>
+                                                    &nbsp;&nbsp;Communication Skill
+                                                      
                                                     </p>
                                                 </div>
                                             </div>
