--- a/visual-communication.html
+++ b/visual-communication.html
@@ -712,9 +712,8 @@
                                                 </div>
                                             </div>
 
-
                                             <div class="gdlr-core-pbf-wrapper split-section2" id="div_983a_29">
-                                                <div class="gdlr-core-pbf-background-wrap" id="div_983a_30"></div>
+                                                <div class="gdlr-core-pbf-background-wrap" id="div_983a_30vis"></div>
                                                 <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                                                     <div
                                                         class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -724,8 +723,8 @@
                                                                 class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                                                 <div
                                                                     class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                                                    <div class="gdlr-core-pbf-element">
-                                                                        <img src="img/about/about us -03.png" alt=""
+                                                                    <div class="gdlr-core-pbf-element vis-img-size">
+                                                                        <img src="img/Visual-img.png" alt=""
                                                                             class="vision-img">
                                                                     </div>
                                                                 </div>
@@ -742,7 +741,7 @@
                                                                             <div
                                                                                 class="gdlr-core-title-item-title-wrap clearfix">
                                                                                 <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                                                    id="h3_983a_4">Our Values </h3>
+                                                                                    id="h3_983a_4">Theory</h3>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -752,24 +751,11 @@
                                                                             <div class="gdlr-core-text-box-item-content"
                                                                                 id="div_983a_27">
                                                                                 <p class="p-about"
-                                                                                    style="color: white;">We work to
-                                                                                    provide
-                                                                                    skilled professionals,
-                                                                                    which ensures
-                                                                                    the highest standards of teaching
-                                                                                    for students.
+                                                                                    style="color: rgb(0, 0, 0);"><br>• Design thinking<br><br>
+                                                                                    • History of visual communication<br><br>
+                                                                                    • Academic research and communication skills<br><br>
+                                                                                    • Print media and production
                                                                                 </p>
-                                                                                <p class="p-about"
-                                                                                    style="color: white;">
-                                                                                    We seek to create an environment of
-                                                                                    trust, support,
-                                                                                    acceptance, and safety to foster a
-                                                                                    sense of belonging
-                                                                                    and well-being in our students.
-                                                                                    For us, change is an opportunity for
-                                                                                    progress, so we work
-                                                                                    tirelessly to ensure the future of
-                                                                                    our students.</p>
                                                                             </div>
                                                                         </div>
                                                                     </div>
