--- a/programmes.html
+++ b/programmes.html
@@ -622,23 +622,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_135948689-400x377.jpg" width="700"
+                                                        src="img/Programs/Foundation-Studies.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">Professor Albert joint research on mobile money in
-                                                            Tanzania</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Foundation Studies</h5>
@@ -649,23 +634,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_218235004-400x377.jpg" width="700"
+                                                        src="img/Programs/Visual-Communication.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">A Global MBA for the next generation of business
-                                                            leaders</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Visual Communication</h5>
@@ -676,23 +646,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_481869205-400x377.jpg" width="700"
+                                                        src="img/Programs/Fashion-Marketing-Management-Design.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">Professor Tom comments on voluntary recalls by snack
-                                                            brands</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Fashion Marketing & Management Design</h5>
@@ -703,23 +658,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_361397258-400x377.jpg" width="700"
+                                                        src="img/Programs/Interior-Design.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">Professor Alexa is interviewed about Twitter&#8217;s
-                                                            valuation</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Interior Design</h5>
@@ -730,23 +670,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_213333985-400x377.jpg" width="700"
+                                                        src="img/Programs/Jewelery-Design.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">Kingster Public Safety Survey open through Nov.
-                                                            30</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Jewellery Design</h5>
@@ -757,23 +682,8 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="upload/shutterstock_787201486-400x377.jpg" width="700"
+                                                        src="/img/Programs/Fashion-Design.png" width="700"
                                                         height="660" alt="" /></div>
-                                                <div class="gdlr-core-blog-modern-content  gdlr-core-center-align">
-                                                    <h3 class="gdlr-core-blog-title gdlr-core-skin-title"
-                                                        style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;">
-                                                        <a href="#">Professor Smith Johny explains Facebook&#8217;s
-                                                            monetization strategy</a></h3>
-                                                    <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
-                                                        <span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"><a
-                                                                href="#">June 6, 2016</a></span><span
-                                                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author"><span
-                                                                class="gdlr-core-head">By</span><a href="#"
-                                                                title="Posts by John Smith" rel="author">John
-                                                                Smith</a></span>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Fashion Design</h5>
