--- a/about-us.html
+++ b/about-us.html
@@ -278,21 +278,23 @@
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
                             +966 11 281 5126</div>
-                        <div class="kingster-top-bar-right kingster-item-pdlr">
-                            <ul id="kingster-top-bar-menu"
-                                class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="#">Collaboration</a></li>
-                                <!-- <li class="menu-item kingster-normal-menu"><a href="#">Portal</a></li> -->
-                            </ul>
-                            <div class="kingster-top-bar-right-social"></div><a class="kingster-top-bar-right-button"
-                                href="#" target="_blank">Gallery</a>
-                            <ul id="kingster-top-bar-menu"
-                                class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="homepage-ar.html"><img
-                                            src="img/sa-flag.png" width="35" alt=""></a></li>
-                            </ul>
-                        </div>
+                            <div class="kingster-top-bar-right kingster-item-pdlr">
+                                <!-- <ul id="kingster-top-bar-menu"
+                                    class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
+                                    <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
+                                </ul> -->
+                                <div class="kingster-top-bar-right-social"></div>
+                                <a class="kingster-top-bar-right-button" href="#">Life In Riyadh</a>
+                                <a class="kingster-top-bar-right-button "
+                                    href="collaboration.html">Collaboration</a>
+                                <a class="kingster-top-bar-right-button active-btn" href="#">Gallery</a>
+                                <ul id="kingster-top-bar-menu"
+                                    class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
+                                    <li class="menu-item kingster-normal-menu"><a href="homepage-ar.html"><img
+                                                src="img/sa-flag.png" width="35" alt=""></a></li>
+                                </ul>
+                            </div>
                     </div>
                 </div>
             </div>
